--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Base</title>
-  <meta name="description" content="">
-
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
-  <link rel="manifest" href="/img/site.webmanifest">
-  <link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#000000">
-  <meta name="msapplication-TileColor" content="#ffca02">
-  <meta name="theme-color" content="#ffca02">
+  <title>Marco Schättin Gartenpflege GmbH</title>
+  <meta name="description" content="Marco Schättin - Ihr Gartenpfleger aus Wangen SZ">
 
   <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
+  <h1>Marco Schättin Gartenpflege</h1>
+
+  <p>Marco Schättin Gartenpflege GmbH<br>Zopfstrasse 20<br>8855 Wangen SZ</p>
+  <p>Telefon: 079 299 49 71<br>E-Mail<br>info@marco-schaettin-gartenpflege.ch</p>
 
 </body>
 </html>
