--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,27 @@
 
 </head>
 <body>
-  <h1>Marco Schättin Gartenpflege</h1>
 
-  <p>Marco Schättin Gartenpflege GmbH<br>Zopfstrasse 20<br>8855 Wangen SZ</p>
-  <p>Telefon: 079 299 49 71<br>E-Mail<br>info@marco-schaettin-gartenpflege.ch</p>
+  <header>
+    <div class="text-center">
+      <div class="container-full">
+        <h1>Marco Schättin Gartenpflege</h1>
+      </div>
+    </div>
+  </header>
+
+  <footer>
+    <div class="backgroundcolor">
+      <div class="container">
+        <p>Marco Schättin Gartenpflege GmbH<br>Zopfstrasse 20<br>8855 Wangen SZ</p>
+        <p>Telefon: 079 299 49 71<br>E-Mail: info@marco-schaettin-gartenpflege.ch</p>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.4.0/vegas.min.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 </html>
