added social media tags

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Marco Schättin Gartenpflege GmbH</title>
-  <meta name="description" content="Marco Schättin - Ihr Gartenpfleger aus Wangen SZ">
+    <!-- COMMON TAGS -->
+    <meta charset="utf-8">
+    <title>Marco Schättin Gartenpflege GmbH</title>
+    <!-- Search Engine -->
+    <meta name="description" content="Baum- und Heckenschnitt, Bepflanzungen und Blumen, Pflege von Fassadenbegrünung und Pergola, Obstbäumen und Beerensträuchern, Düngung, Hochdruckreiniger Arbeiten und mehr!">
+    <meta name="image" content="https://www.marco-schaettin-gartenpflege.ch/img/logo-og.jpg">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="Marco Schättin Gartenpflege GmbH">
+    <meta itemprop="description" content="Baum- und Heckenschnitt, Bepflanzungen und Blumen, Pflege von Fassadenbegrünung und Pergola, Obstbäumen und Beerensträuchern, Düngung, Hochdruckreiniger Arbeiten und mehr!">
+    <meta itemprop="image" content="https://www.marco-schaettin-gartenpflege.ch/img/logo-og.jpg">
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="Marco Schättin Gartenpflege GmbH">
+    <meta name="og:description" content="Baum- und Heckenschnitt, Bepflanzungen und Blumen, Pflege von Fassadenbegrünung und Pergola, Obstbäumen und Beerensträuchern, Düngung, Hochdruckreiniger Arbeiten und mehr!">
+    <meta name="og:image" content="https://www.marco-schaettin-gartenpflege.ch/img/logo-og.jpg">
+    <meta name="og:url" content="https://www.marco-schaettin-gartenpflege.ch">
+    <meta name="og:site_name" content="Marco Schättin Gartenpflege aus Wangen SZ">
+    <meta name="og:locale" content="de_CH">
+    <meta name="og:type" content="website">
 
   <link rel="stylesheet" href="css/styles.css">
 
@@ -140,5 +153,14 @@
         }
     </script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAC4izULHdLACBUCp-IZREnbBSYZMXDYXE&callback=initMap"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120138193-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-120138193-1');
+    </script>
 </body>
 </html>
