added some additional tags and updated content

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- COMMON TAGS -->
     <meta charset="utf-8">
-    <title>Marco Schättin Gartenpflege GmbH</title>
+    <title>Marco Schättin Gartenpflege GmbH aus Wangen SZ</title>
     <!-- Search Engine -->
     <meta name="description" content="Baum- und Heckenschnitt, Bepflanzungen und Blumen, Pflege von Fassadenbegrünung und Pergola, Obstbäumen und Beerensträuchern, Düngung, Hochdruckreiniger Arbeiten und mehr!">
     <meta name="image" content="https://www.marco-schaettin-gartenpflege.ch/img/logo-og.jpg">
@@ -19,6 +19,9 @@
     <meta name="og:site_name" content="Marco Schättin Gartenpflege aus Wangen SZ">
     <meta name="og:locale" content="de_CH">
     <meta name="og:type" content="website">
+    <!-- Search engine verification -->
+    <meta name="google-site-verification" content="24TY1efBldYq5JhfsQdBn_Ll93zSqRP9Y_Z8xXH-NKo" />
+    <meta name="msvalidate.01" content="496D7D489C1263BE100CCEC8F7B325E4" />
 
   <link rel="stylesheet" href="css/styles.css">
 
@@ -35,8 +38,9 @@
 
       <h1>Ihr Spezialist für den Gartenunterhalt</h1>
 
-      <p>Nach der Ausbildung zum <strong>Gärtner EFZ</strong> sammelte ich bei einem renommierten <strong>Gartenbauer</strong> aus der Region March während 10 Jahren Berufserfahrung in den verschiedensten Gartenbaudisziplinen. Spezialisiert habe ich mich auf den Bereich <strong>Gartenunterhalt</strong> – in welchem ich seit dem 1. Juni 2018 selbständig tätig bin.</p>
-      <p>Fachmännischer <strong>Baum- und Heckenschnitt, Palme einwintern, Bepflanzungen, Entsorgung von Grüngut, Garten- und Weihnachtsdeko.</strong> Gerne erzähle ich Ihnen mehr von mir und meinen Dienstleistungen.</p>
+      <p>Nach der Ausbildung zum <strong>Gärtner EFZ</strong> sammelte ich bei einem renommierten <strong>Gartenbauer</strong> aus der Region March während 12 Jahren Berufserfahrung in den verschiedensten Gartenbaudisziplinen. Spezialisiert habe ich mich auf den Bereich <strong>Gartenunterhalt</strong> – in welchem ich seit dem 1. Juni 2018 selbständig tätig bin.</p>
+      <p>Fachmännischer <strong>Baum- und Heckenschnitt</strong>, Palme einwintern, <strong>Bepflanzungen und Blumen</strong>, Entsorgung von Grüngut, Pflege von Fassadenbegrünung und Pergola, Obstbäumen und Beerensträuchern, Düngung, Häckseldienst, <strong>Hochdruckreiniger für Mauern, Treppen und Beläge</strong>, handgemachte und einzigartige <strong>Garten- und Weihnachtsdeko</strong> sowie allgemeine Garten-Allrounder Arbeiten.</p>
+      <p>Ich sorge für die <strong>Pflege und den Unterhalt</strong> Ihres Gartens <strong>zu jeder Jahreszeit</strong> mit viel Erfahrung und Sorgfalt. Dabei spielt es keine Rolle, ob es sich um Ihr kleines <strong>Gartenparadies</strong> oder eine <strong>weitläufige Grünanlage</strong> handelt. Gerne erzähle ich Ihnen mehr von mir und meinen Dienstleistungen.</p>
       <p>Über eine Kontaktaufnahme freue ich mich!</p>
       <p>Ihr Marco Schättin</p>
 
