mobile meta fix

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 <head>
     <!-- COMMON TAGS -->
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marco Schättin Gartenpflege GmbH aus Wangen SZ</title>
     <!-- Search Engine -->
     <meta name="description" content="Baum- und Heckenschnitt, Bepflanzungen und Blumen, Pflege von Fassadenbegrünung und Pergola, Obstbäumen und Beerensträuchern, Düngung, Hochdruckreiniger Arbeiten und mehr!">
