--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,7 @@
               </script>
               <noscript><span style="display:none;">-mfG0815</span>&#105;&#110;&#102;&#111;<span style="display:none;">-qwr2342</span> [&#97;&#116;] <span style="display:none;">-hfg3453</span>&#x6d;&#x61;&#x72;&#x63;&#x6f;&#x2d;&#x73;&#x63;&#x68;&#x61;&#x65;&#x74;&#x74;&#x69;&#x6e;&#x2d;&#x67;&#x61;&#x72;&#x74;&#x65;&#x6e;&#x70;&#x66;&#x6c;&#x65;&#x67;&#x65;&#x2e;&#x63;&#x68;<span style="display:none;">-tdg6435</span></noscript>
               </p>
+            <p>UID: <a href="https://sz.chregister.ch/cr-portal/auszug/auszug.xhtml;jsessionid=5478b649e02606387dcdbb7d95db?uid=CHE-162.143.672" target="_blank">CHE-162.143.672</a></p>  
         </div>
         <div class="col col-12 col-6-m">
             <!-- <img src="img/logo.jpg" alt="Logo Marco Schättin Gartenunterhalt GmbH"> -->
