added final logo and changed font color

--- a/src/index.html
+++ b/src/index.html
@@ -38,13 +38,15 @@
 
   <main class="container">
 
-      <h1>Ihr Spezialist für den Gartenunterhalt</h1>
+        <h1>Ihr Spezialist für den Gartenunterhalt</h1>
 
-      <p>Nach der Ausbildung zum <strong>Gärtner EFZ</strong> sammelte ich bei einem renommierten <strong>Gartenbauer</strong> aus der Region March während 12 Jahren Berufserfahrung in den verschiedensten Gartenbaudisziplinen. Spezialisiert habe ich mich auf den Bereich <strong>Gartenunterhalt</strong> – in welchem ich seit dem 1. Juli 2018 selbständig tätig bin.</p>
-      <p>Fachmännischer <strong>Baum- und Heckenschnitt</strong>, Palme einwintern, <strong>Bepflanzungen und Blumen</strong>, Entsorgung von Grüngut, Pflege von Fassadenbegrünung und Pergola, Obstbäume und Beerensträucher, Düngung, Häckseldienst, <strong>Hochdruckreiniger für Mauern, Treppen und Beläge</strong>, handgemachte und einzigartige <strong>Garten- und Weihnachtsdeko</strong> sowie allgemeine Garten-Allrounder Arbeiten.</p>
-      <p>Ich sorge für die <strong>Pflege und den Unterhalt</strong> Ihres Gartens <strong>zu jeder Jahreszeit</strong> mit viel Erfahrung und Sorgfalt. Dabei spielt es keine Rolle, ob es sich um Ihr kleines <strong>Gartenparadies</strong> oder eine <strong>weitläufige Grünanlage</strong> handelt. Gerne erzähle ich Ihnen mehr von mir und meinen Dienstleistungen.</p>
-      <p>Über eine Kontaktaufnahme freue ich mich!</p>
-      <p>Ihr Marco Schättin</p>
+        <p>Nach der Ausbildung zum <strong>Gärtner EFZ</strong> sammelte ich bei einem renommierten <strong>Gartenbauer</strong> aus der Region March während 12 Jahren Berufserfahrung in den verschiedensten Gartenbaudisziplinen. Spezialisiert habe ich mich auf den Bereich <strong>Gartenunterhalt</strong> – in welchem ich seit dem 1. Juli 2018 selbständig tätig bin.</p>
+        <p>Fachmännischer <strong>Baum- und Heckenschnitt</strong>, Palme einwintern, <strong>Bepflanzungen und Blumen</strong>, Entsorgung von Grüngut, Pflege von Fassadenbegrünung und Pergola, Obstbäume und Beerensträucher, Düngung, Häckseldienst, <strong>Hochdruckreiniger für Mauern, Treppen und Beläge</strong>, handgemachte und einzigartige <strong>Garten- und Weihnachtsdeko</strong> sowie allgemeine Garten-Allrounder Arbeiten.</p>
+        <p>Ich sorge für die <strong>Pflege und den Unterhalt</strong> Ihres Gartens <strong>zu jeder Jahreszeit</strong> mit viel Erfahrung und Sorgfalt. Dabei spielt es keine Rolle, ob es sich um Ihr kleines <strong>Gartenparadies</strong> oder eine <strong>weitläufige Grünanlage</strong> handelt. Gerne erzähle ich Ihnen mehr von mir und meinen Dienstleistungen.</p>
+        <p>Über eine Kontaktaufnahme freue ich mich!</p>
+        <p>Ihr Marco Schättin</p>
+
+        <img src="/img/logo.jpg" alt="Logo Marco Schättin Gartenpflege" class="logo">
 
   </main>
 
