--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,11 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <!-- Geodata -->
+    <meta name="geo.placename" content="Zopfstrasse 20, 8855 Wangen, Schweiz" />
+    <meta name="geo.position" content="47.1884710;8.9003050" />
+    <meta name="geo.region" content="CH-Schwyz" />
+    <meta name="ICBM" content="47.1884710, 8.9003050" />
 
     <link rel="stylesheet" href="css/styles.css">
 
