--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
         <div class="col col-12 col-6-m">
           <p><strong>Marco Schättin Gartenpflege GmbH</strong><br>Zopfstrasse 20<br>8855 Wangen SZ</p>
           <p>Telefon: <a href="tel:0041792994971">079 299 49 71</a>
-          <br>E-Mail: <script>
+          <br>E-Mail:&nbsp;<script>
               var pref     = "&#109;a" + "i&#108;" + "&#116;o:";
               var attr     = "hr" + "ef" + "=";
               var atV1     = "%40";
